# Simply-Website

./: README.md  add-app.sh  package-lock.json  package.json  setup-explorer.sh  setup-monorepo.sh  setup-monorepo2pointO.sh
cd simply-turborepo/: package.json
simply-turborepo/: .gitignore  README.md  package.json  tailwind.config.js
simply-turborepo/apps/developer/desktop/: package.json
simply-turborepo/apps/developer/web/: package.json
simply-turborepo/apps/documenter/desktop/: package.json
simply-turborepo/apps/explorer/desktop/: package.json
simply-turborepo/apps/explorer/mobile/: package.json  tailwind.config.js
simply/simply/: README.md  package.json  turbo.json
simply/simply/app/: page.tsx
simply/simply/apps/app1/: package.json
simply/simply/apps/app1/desktop/src-tauri/: Cargo.toml  tauri.conf.json
simply/simply/apps/app1/desktop/src-tauri/src/: main.rs
simply/simply/apps/app2/: package.json
simply/simply/apps/app3/: package.json
simply/simply/scripts/: create-app.sh
simply_codebase/: package.json  pnpm-lock.yaml
simplyweb/simplyweb/src/styles/: main.css
source_code/: .cta.json  package-lock.json  package.json  tailwind.config.js
source_code/src/: main.tsx  routeTree.gen.ts
source_code/src/components/: simplybutton.tsx  simplydropdown.tsx  simplyheader.tsx  simplyinput.tsx  simplyloginheader.tsx  simplyslider.tsx
source_code/src/components/frontpage-elements/: cover.css  cover.frontpage.tsx  (+2 more)
source_code/src/routes/: __root.tsx  index.tsx
source_code/src/styles/: buttons.css  header.css  input.css  login.css  main.css
(+43 files in other folders)
